fixes critical/high security concerns
